...
        setupNavigationBar()
        setupCollectionView()
        getCardList()
    }
    
    private func setupNavigationBar() {
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Search", style: .plain, target: self, action: #selector(setupSearchBar))
    }
    
    @objc private func setupSearchBar() {
        let searchBar = UISearchBar()
        searchBar.placeholder = "Search Pokédex"
        searchBar.showsCancelButton = true
        searchBar.tintColor = .white
        searchBar.barStyle = .black
        searchBar.delegate = self
        navigationItem.titleView = searchBar
        navigationItem.rightBarButtonItem = nil
...
